--- a/flexbox-deep-dive/package.json
+++ b/flexbox-deep-dive/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "deep-dive-starter",
+  "name": "flexbox-deep-dive",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,10 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.15",
-    "expo-status-bar": "~1.4.4",
+    "expo": "~50.0.8",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-native": "0.73.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
