--- a/08-native-features/package.json
+++ b/08-native-features/package.json
@@ -17,7 +17,9 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "expo-camera": "~14.0.6",
-    "expo-image-picker": "~14.7.1"
+    "expo-image-picker": "~14.7.1",
+    "expo-location": "~16.5.5",
+    "react-native-maps": "1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
